"$Id$"
Top of SVN tree:
------------------------------------------------------------------------------

Pending fix for [ 1876788 ] Doubled characters in GTK clients (unusable).
mwedel noted gtk_signal_emit_stop_by_name() was not used consistently
everywhere keypresses were consumed by the client.  Patches were written
and tested to show that consistent use of gtk_signal_emit_stop_by_name()
caused the doubled character problem to disappear.  Then a new patch was
written to replace redundant call/return pairs with fall-through logic.
http://www.gtk.org/api/2.6/gtk/gtk-Signals.html#gtk-signal-emit-stop-by-name
also states this is a deprecated function, g_signal_stop_emission_by_name()
is now used instead of gtk_signal_emit_stop_by_name().
  gtk-v2/src/keys.c
Kevin Bulgrien 2008-12-04

To satisfy rpmlint and remove the error "E: no-packager-tag", add the packager
tag and define it to a sane default.
  crossfire-client.spec
Kevin Bulgrien 2008-11-28

To satisfy rpmlint and remove the error "E: non-standard-group X11/Games", all
package groups are changed from "X11/Games" to "Games/Adventure".  Choices
offered by rpmlint were "Games/Adventure", "Games/Arcade", "Games/Boards",
"Games/Cards", "Games/Other", "Games/Puzzles", "Games/Sports", and
"Games/Strategy"
  crossfire-client.spec
Kevin Bulgrien 2008-11-28

Update all client .desktop files so they do not trigger rpmlint messages like
".desktop file is not valid, check with desktop-file-validate":  Terminate
the Categories key/value with a semicolon; remove the deprecated Encoding key.
Unify the Comment for all three clients.  Add an appropriate GenericName key.
Add [en] localestrings for the Name, GenericName, and Comment keys to help
make it more obvious that translations may be placed in this file.  Put the
keys in order as listed in http://standards.freedesktop.org/desktop-entry-spec
These changes are tested with desktop-file-validate.
 x11/crossfire-client.desktop
 gtk/crossfire-client.desktop